<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Mustard {MOD}</string>
    <string name="template_user_agent">%1$s/%2$s (Linux; Android)</string>
    <string name="no_dents">No Notice found...</string>
    <string name="title">Title</string>
    <string name="status">What\'s up?</string>
    <string name="update">Send</string>
    <string name="upload">Upload</string>
    <string name="disabled">Disabled</string>
    <string name="enable_update_location">Attach location</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_fav">Added to favorites</string>
    <string name="error_fav">Error adding to favorites</string>
    <string name="confirm_unfav">Removed from favorites</string>
    <string name="error_unfav">Error removing from favorites</string>
    <string name="confirm_repeat">Notice repeated</string>
    <string name="error_repeat">Error repeating the notice. Disabled new mode</string>
    <string name="confirm_sub">Subscribed</string>
    <string name="error_sub">Error subscribing </string>
    <string name="confirm_unsub">Unsubscribed</string>
    <string name="error_unsub">Error unsubscribing </string>
    <string name="confirm_block">Blocked</string>
    <string name="error_block">Error blocking %s</string>
    <string name="confirm_unblock">Unblocked</string>
    <string name="error_unblock">Error unblocking %s</string>
    <string name="confirm_join">Joined</string>
    <string name="error_join">Error joining group</string>
    <string name="confirm_leave">Left</string>
    <string name="error_leave">Error leaving group</string>
    <string name="error_generic">Sorry, something went wrong..</string>
    <string name="error_generic_detail">Sorry, something went wrong..\n%s</string>
    <string name="error_title_no_network">No network connection</string>
    <string name="error_no_network">Unable to post the notice because of network connection problems</string>
    <string name="error_no_attachment_supported">StatusNet server in use does not support attachment</string>
    <string name="error_no_dents_from">Error retriving dent to reply/fav</string>
    <string name="warning_text_too_long">That\'s too long. Max notice size is %s chars. Would you continue anyhow?</string>
    <string name="warning_attachment_too_long">Attachment is too big. Max attachement size is %s bytes.</string>
    <string name="msg_logout">Are you sure you want to logout?\nYour account will be deleted from mustard</string>
    <string name="msg_confirm_repeat">Repeat this notice?</string>
    <string name="msg_confirm_block">Block this user?</string>
    <string name="msg_confirm_unblock">Unblock this user?</string>
    <string name="msg_welcome">Hello %s!\nwould you like to follow @mustard ?</string>
    <string name="title_welcome">Welcome!</string>
    <string name="welcome_label">Welcome %s!</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_directmessages">Direct Messages</string>
    <string name="dm_in">Inbox</string>
    <string name="dm_out">Outbox</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="error_no_oauth">"
    Sorry, mustard does not have the OAuth consumer key for %s.
    Please send an email to mustard@macno.org
    "
    </string>
    <string name="identica">Identica</string>
    <string name="statusnet">Status Net</string>
    <string name="twitter">Twitter</string>
    <string name="oauth_wrong_consumer_key">The consumer key is wrong. Please notify to mustard@macno.org</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="close">Close</string>
    <string name="always_ask">Always ask</string>
    <string name="always_sent">Send without asking</string>
    <string name="shorturl">Short URL!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="instance">Instance</string>
	<string name="label_force_ssl">Force use of TLS/SSL</string>
    <string name="new_password">New password</string>
	<string name="new_password_hint">New password</string>
	<string name="new_password_info">This function will edit your local password</string>
    <string name="lbl_search">Enter search keyword </string>
    <string name="lbl_search_type">Search for:</string>
	<string name="lbl_update_password">Edit</string>
	<string name="lbl_update_avatar">Change avatar</string>
	<string name="lbl_create_account">New account</string>
	<string name="lbl_oauth_login">OAuth login</string>
	<string name="lbl_account_login">Username login</string>
	<string name="btn_login">Login</string>
	<string name="btn_login_oauth">Click on the image to use OAuth (if available!)</string>
    <string name="btn_search">Search</string>
    <string name="btn_squeeze">Squeeze</string>
    <string name="btn_test">Test!</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_filter_settings">Filter Settings</string>
    <string name="btn_clear_settings">Clear database and images</string>
    <string name="search_users">Users</string>
    <string name="search_groups">Groups</string>
    <string name="search_notices">Notices</string>
    <string name="search_tags">Tags</string>
    <string name="wait_please">"Wait please"</string>
    <string name="done">Done!</string>
    <string name="user_following">Following: %s</string>
    <string name="user_follower">Followers: %s</string>
    <string name="user_dents">Dents: %s</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_repeat">Repeat</string>
    <string name="menu_view_geo">View Location</string>
	<string name="menu_share">Share</string>
    <string name="menu_fav">Favor</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_mentions">Replies</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_about">About</string>
    <string name="menu_add_new">Add new</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bookmarks">Bookmarks</string>
	<string name="menu_conversation">Conversation</string>
	<string name="menu_view_attachment">Attachments</string>
	<string name="preferences_timeline">Timeline</string>
	<string name="pref_merge_timeline_title">Merge timelines</string>
	<string name="pref_merge_timeline_summary">Choose which accounts to merge into main timeline</string>
	<string name="pref_rows_fetch_default">25</string>
	<string name="pref_rows_fetch_title">Number of notices</string>
	<string name="pref_rows_fetch_summary">This preference allows to set the number of notices to retrieve</string>
	<string name="pref_rows_fetch_dialog_title">Number of notices</string>
	<string name="preferences_notifications">Notifications</string>
	<string name="pref_check_updates_title">Enable notifications?</string>
    <string name="pref_check_updates_summary">Check for new mentions when application is not running</string>
    <string name="pref_check_updates_interval_title">Update check interval</string>
    <string name="pref_check_updates_interval_summary">Minutes between checks</string>
    <string name="pref_check_updates_interval_dialog_title">Interval in minutes:</string>
    <string name="pref_check_updates_interval_default">60</string>
    <string name="vibrate_title">Vibrate?</string>
    <string name="vibrate_summary">Vibrate the phone when new mentions arrive</string>
    <string name="pref_ringtone_title">Ringtone?</string>
    <string name="pref_ringtone_summary">Ringtone to use when new mentions arrive</string>
	<string name="preferences_geolocation">Geolocation</string>
	<string name="pref_enable_geo_title">Enable?</string>
    <string name="pref_enable_geo_summary">Send geolocation info when posting notices</string>
	<string name="pref_geo_fuzzy_title">Accuracy</string>
	<string name="pref_geo_fuzzy_summary">Approximate location by km</string>
	<string name="pref_geo_fuzzy_dialog_title">Radius (km)</string>
	<string name="pref_geo_fuzzy_default">10</string>
	<string name="preferences_general">General</string>
	<string name="pref_new_repeat_title">New Repeat mode?</string>
    <string name="pref_new_repeat_summary">Enable new repeat API</string>
    <string name="pref_show_nick_reply_title">Include nickname in reply?</string>
    <string name="pref_show_nick_reply_summary">Include author nickname in replies</string>
    <string name="pref_show_nick_reply_summary_enabled">Authors nickname will be added to reply.</string>
    <string name="pref_show_nick_reply_summary_disabled">Authors nickname will not be added to reply. If you\'re using twitterbridge plugin, authors username will still be added to dents (But only, if they come from Twitter).</string>
    <string name="pref_always_reply_all">Always reply all?</string>
    <string name="pref_always_reply_all_summary">Include all nicknames in replies</string>
	<string name="pref_refresh_after_post_title">Refresh after post?</string>
	<string name="pref_refresh_after_post_summary">If enabled, timeline will be refreshed after a post</string>
	<string name="pref_auto_refresh_title">Auto refresh timeline?</string>
	<string name="pref_auto_refresh_summary">If enabled, timeline will be refreshed automatically</string>
	<string name="pref_spamreport_on_block">Report spammer after Block?</string>
	<string name="pref_spamreport_on_block_summary">If enabled, after blocking a user a spamreport is generated, that you just need to send.</string>
	<string name="pref_auto_refresh_interval_default">60</string>
	<string name="preferences_layout">Layout (Restart mustard to take effect)</string>
	<string name="pref_font_size_title">Font size</string>
    <string name="pref_font_size_summary">Choose the font size</string>
	<string name="pref_url_shortener_title">URL shortener</string>
    <string name="pref_url_shortener_summary">Choose the URL shortener. Only in use, if you click onto short url on creating a dent</string>
	<string name="url_shortener">URL shortener</string>
	<string name="lbl_global_settings">Global Settings</string>
	<string name="lbl_oauth_settings">OAuth Settings</string>
	<string name="lbl_settings">Mustard Settings</string>
	<string name="font_size">Font size</string>
	<string name="pref_theme_layout_title">Theme</string>
    <string name="pref_theme_layout_summary">Choose your preferred theme.</string>
	<string name="theme">Theme</string>
	<string name="theme_bw">White on Black</string>
	<string name="txt_oauth">OAuth Settings</string>
	<string name="txt_oauth_key">Own OAuth Consumer Key</string>
	<string name="txt_oauth_cSecret">Own OAuth Consumer Secret</string>
	<string name="txt_show_source">Display source in dents</string>
	<string name="txt_show_source_summary">Display source, i.e. \"from identi.ca\", under dents</string>
	<string name="txt_oauth_summary">Experimental and needs testing!</string>
	<string name="spam_settings">Spamsettings</string>
	<string name="spam_group">Spam group</string>
	<string name="spam_group_summary">Group name, where to send dent to, after Spam report. i.e. \"spamreport\". The ! is not needed to add to string.</string>
	<string name="spam_user">Spam user</string>
	<string name="spam_user_summary">Username to add to dent to notify. i.e. \"support\". The @ is not needed to add to string.</string>
	<string name="pc_ask_on">Ask on</string>
	<string name="ask_on_repeat">Repeat dent</string>
	<string name="ask_on_block">Block a user</string>
	<string name="txt_settings">Settings</string>
	<string name="btn_directMessage">Direct Messages</string>
	<string name="btn_compose_message">Compose new PM</string>
</resources>