<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
		android:id="@+id/mn_refresh"
		android:title="@string/menu_refresh"
		android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_reload"
	/>
    <item
		android:id="@+id/mn_compose"
		android:title="@string/menu_add_new"
		android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"
	/>
    <item
		android:id="@+id/mn_search"
		android:title="@string/menu_search"
		android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"
	/>
    	<item
		android:id="@+id/mn_mentions"
		android:title="@string/menu_mentions"
        android:icon="@drawable/ic_action_monolog"
		android:showAsAction="never"
	/>
	<item
		android:id="@+id/mn_settings"
		android:title="@string/menu_settings"
		android:showAsAction="never"
        android:icon="@drawable/ic_action_gear"
	/>
	<item
		android:id="@+id/mn_bookmarks"
		android:title="@string/menu_bookmarks"
		android:showAsAction="never"
	/>
	<item
		android:id="@+id/mn_logout"
		android:title="@string/menu_logout"
		android:showAsAction="never"
	/>
	<item
		android:id="@+id/mn_about"
		android:title="@string/menu_about"
		android:showAsAction="never"
	/>
</menu>