<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:fillViewport="true"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">

	<LinearLayout
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="5dp">

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginRight="5dp"
			    android:layout_marginTop="5dp"
			    android:src="@drawable/ic_action_settings" />
			
			<TextView
			    style="@style/Text.High"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:text="@string/lbl_settings"
			    android:textSize="20sp" />
			
		</LinearLayout>
		
		<Button 
			android:id="@+id/btn_global_settings" 
			android:layout_marginRight="5dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
			android:drawableLeft="@drawable/ic_action_gear"
			android:drawablePadding="10dp"
			android:text="@string/lbl_global_settings" />
		
		<Button
		    android:id="@+id/btn_account_settings"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dp"
		    android:drawableLeft="@drawable/ic_action_android"
		    android:drawablePadding="10dp"
		    android:text="@string/menu_account_settings" />
			
		<Button
		    android:id="@+id/btn_oauth_settings"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dp"
		    android:drawableLeft="@drawable/ic_action_key"
		    android:drawablePadding="10dp"
		    android:text="@string/lbl_oauth_settings" />
		
		<Button
		    android:id="@+id/btn_filter_settings"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dp"
		    android:drawableLeft="@drawable/ic_action_filter"
		    android:drawablePadding="10dp"
		    android:text="@string/btn_filter_settings" />

		<Button
		    android:id="@+id/btn_clear_settings"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dp"
		    android:drawableLeft="@drawable/ic_action_trash"
		    android:drawablePadding="10dp"
		    android:text="@string/btn_clear_settings" />
			
	</LinearLayout>

</ScrollView>